--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,4 +1,4 @@
-spring.datasource.url=jdbc:sqlserver://localhost;databaseName=devmindBanking
+spring.datasource.url=jdbc:mysql://${MYSQL_HOST:localhost}:3306/banking_app
 spring.datasource.username=root
 spring.datasource.password=root
 spring.datasource.driverClassName=com.mysql.jdbc.Driver
